--- a/owl-nft/package.json
+++ b/owl-nft/package.json
@@ -15,5 +15,9 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
     "hardhat": "^2.9.3"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "hardhat-abi-exporter": "^2.9.0"
   }
 }
