--- a/Vii_Owl/Hardhat_Contract/package.json
+++ b/Vii_Owl/Hardhat_Contract/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@openzeppelin/contracts": "^4.6.0",
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "hardhat-abi-exporter": "^2.9.0"
   }
 }
