--- a/VII_FRAME/Hardhat_Contract/package.json
+++ b/VII_FRAME/Hardhat_Contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-hardhat",
+  "name": "owl-nft",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,9 +11,18 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/hardhat-upgrades": "^1.17.0",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
-    "hardhat": "^2.9.3"
+    "hardhat": "^2.9.3",
+    "web3": "^1.7.3"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@openzeppelin/contracts": "^4.6.0",
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
+    "hardhat-abi-exporter": "^2.9.0"
   }
 }
