--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "pm2": "^5.2.0"
+    "ethereumjs-tx": "^2.1.2",
+    "express": "^4.18.1",
+    "mysql": "^2.18.1",
+    "pm2": "^5.2.0",
+    "web3": "^1.7.3"
   }
 }
