--- a/VII_Wallet/Hardhat_Contract/package.json
+++ b/VII_Wallet/Hardhat_Contract/package.json
@@ -7,5 +7,10 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.8",
     "hardhat": "^2.9.9"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
+    "@openzeppelin/hardhat-upgrades": "^1.18.3",
+    "hardhat-abi-exporter": "^2.9.0"
   }
 }
