--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "ethereumjs-tx": "^2.1.2",
+    "ethers": "^5.6.8",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
     "pm2": "^5.2.0",
