--- a/project-tool/Hardhat_Contract/package.json
+++ b/project-tool/Hardhat_Contract/package.json
@@ -7,5 +7,11 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.8",
     "hardhat": "^2.9.9"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
+    "@openzeppelin/hardhat-upgrades": "^1.19.0",
+    "hardhat-abi-exporter": "^2.9.0"
   }
 }
