--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@metamask/eth-sig-util": "^4.0.1",
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.6.8",
     "express": "^4.18.1",
