--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ethers": "^5.6.8",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "pm2": "^5.2.0",
     "request": "^2.88.2",
     "swagger": "^0.7.5",
