--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.7",
     "pm2": "^5.2.0",
     "prompt": "^1.3.0",
     "request": "^2.88.2",
