--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "nodemailer": "^6.7.7",
     "pm2": "^5.2.0",
     "prompt": "^1.3.0",
+    "rcedit": "^3.0.1",
     "request": "^2.88.2",
     "swagger": "^0.0.1",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
-    "web3": "^1.7.4"
+    "tronweb": "^4.2.0",
+    "web3": "^1.7.4",
+    "web3.storage": "^4.3.0"
   },
   "devDependencies": {
-    "pkg": "^5.8.0"
+    "pkg": "^5.8.0",
+    "resedit": "^1.6.0"
   }
 }
