--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "@metamask/eth-sig-util": "^4.0.1",
     "api": "^4.5.2",
+    "bignumber": "^1.1.0",
+    "bignumber.js": "^9.1.0",
+    "body-parser": "^1.20.0",
     "canvas": "^2.9.3",
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.6.8",
