--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.6.8",
     "express": "^4.18.1",
+    "ipfs-api": "^26.1.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.7",
