--- a/Vii_Owl/Hardhat_Contract/package.json
+++ b/Vii_Owl/Hardhat_Contract/package.json
@@ -23,6 +23,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@openzeppelin/contracts": "^4.6.0",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
+    "Hardhat": "npm:hardhat@^2.11.2",
     "hardhat-abi-exporter": "^2.9.0"
   }
 }
