--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@chainlink/contracts": "^0.4.1",
     "@metamask/eth-sig-util": "^4.0.1",
     "api": "^4.5.2",
     "bignumber": "^1.1.0",
