--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.1",
     "hardhat-abi-exporter": "^2.10.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
     "web3": "^1.8.0"
