--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
     "@openzeppelin/hardhat-upgrades": "^1.20.0",
+    "bip39": "^3.0.4",
     "express": "^4.18.1",
     "hardhat-abi-exporter": "^2.10.0",
     "jsonfile": "^6.1.0",
