--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.7.2",
     "hardhat": "^2.12.2"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.2",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
