--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "pm2": "^5.2.2",
+    "prompt": "^1.3.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
     "web3": "^1.8.0"
