--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
     "@openzeppelin/hardhat-upgrades": "^1.20.0",
+    "@wagmi/core": "^0.8.7",
     "bip39": "^3.0.4",
     "express": "^4.18.1",
     "hardhat-abi-exporter": "^2.10.0",
@@ -22,6 +23,7 @@
     "prompt": "^1.3.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
+    "wagmi": "^0.10.0",
     "web3": "^1.8.0"
   }
 }
