--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
     "@openzeppelin/hardhat-upgrades": "^1.20.0",
     "@wagmi/core": "^0.8.7",
+    "base32": "^0.0.7",
     "bip39": "^3.0.4",
+    "conflux-address-js": "^1.0.4",
     "express": "^4.18.2",
     "hardhat-abi-exporter": "^2.10.0",
     "hardhat-conflux": "^0.1.1",
