--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.1",
-    "ethereum-waffle": "^3.4.4",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
     "hardhat": "^2.12.4"
   },
   "dependencies": {
+    "@dqbd/tiktoken": "^1.0.0-alpha.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.8.0",
